--- a/sass/selector.scss
+++ b/sass/selector.scss
@@ -149,9 +149,13 @@
     }
 
     &__type {
+      position: relative;
+      top: -1px;
       text-transform: uppercase;
-      color: gray;
-      font-size: 14px;
+      color: #858585;
+      font-size: 12px;
+      font-weight: 600;
+      letter-spacing: .5px;
     }
   }
 }
