--- a/sass/selector.scss
+++ b/sass/selector.scss
@@ -142,8 +142,24 @@
   }
 
   &--semsearch-tag {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
     .pmx-selector {
+      &__value {
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
       &__label {
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         color: #000;
       }
     }
