--- a/sass/multiSelector.scss
+++ b/sass/multiSelector.scss
@@ -75,7 +75,7 @@
         right: 40px;
         width: 30px;
         height: 100%;
-        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 90%, white 100%);
+        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #FFF 90%, #FFF 100%);
         pointer-events: none;
         z-index: 99;
       }
