--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -2,9 +2,17 @@
 ---
 
 // the file extension has to be .css
-@import "font-icons.css";
+
 @import "reset.css";
+
+@import "app.css";
+
+// Plugins
 @import "plugin/tabs.css";
 @import "plugin/sticky.css";
-@import "app.css";
 @import "plugin/hideScrollbars.css";
+
+// Components
+@import "components/multiSelector.css";
+@import "components/selector.css";
+@import "components/itemBox.css";
