--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -8,8 +8,8 @@
       </div>
       <ul>
         <span class="tab__active-link-bar"></span>
-        <li><a href="#" class="tab__link" tabindex="1"><span>Structure</span></a></li>
-        <li><a href="#" class="tab__link active" tabindex="2"><span>My smartlists</span></a></li>
+        <li><a href="#" class="tab__link active" tabindex="1"><span>Structure</span></a></li>
+        <li><a href="#" class="tab__link" tabindex="2"><span>My smartlists</span></a></li>
         <li><a href="#" class="tab__link" tabindex="3"><span>Shared by me</span></a></li>
         <li><a href="#" class="tab__link" tabindex="4"><span>Favorites</span></a></li>
         <li><a href="#" class="tab__link" tabindex="5"><span>Recently used</span></a></li>
