--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,8 @@
   {% include head.html %}
 
   <body>
-    {% include app.html %}
+    {% include home.html %}
+
     {% include js_files.html %}
   </body>
 </html>
