--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
+  
   <title>PMX Desktop Mockup</title>
 
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
