--- a/_includes/blocks/notifications.html
+++ b/_includes/blocks/notifications.html
@@ -9,16 +9,58 @@
   </div>
 
   <div class="notifications__actions">
-    <ul class="notifications__actionsList">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">My To Do's</a></li>
-      <li><a href="#">Time sheet</a></li>
-      <li><a href="#">Reports</a></li>
-    </ul>
 
-    <ul class="notifications__actionsList notifications__actionsList--account">
-      <li><a href="#"><i class="help"></i>Help</a></li>
-      <li><a href="#"><i class="settings"></i>Settings</a></li>
-      <li><a href="#"><i class="logout"></i>Logout</a></li>
-    </ul>
+    <div class="itemBox">
+      <div class="itemBoxTable">
+        <div class="itemBoxTable__body">
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">Home</div>
+              </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">My To Do's</div>
+              </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">Time sheets</div>
+              </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">Reports</div>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </div><!-- /.itemBox -->
+
+  </div>
+
+  <div class="notifications__actions">
+
+    <div class="itemBox">
+      <div class="itemBoxTable">
+        <div class="itemBoxTable__body">
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">Help</div>
+              </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">Settings</div>
+              </li>
+          </ul>
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                  <div class="itemBoxTable__bodyCellInner ">Logout</div>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </div><!-- /.itemBox -->
+
   </div>
