--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -11,12 +11,32 @@
 }
 
 .itemBox {
+  color: #000;
+
   &--children {
     padding: 15px 0 15px 15px;
     background-color: #808080;
     opacity: 0;
 
     animation: fadeIn .3s linear forwards;
+  }
+
+  &Filter {
+    position: relative;
+
+    &__input {
+      position: relative;
+      height: 40px;
+      background-color: #FFF;
+      margin: 0 0 15px 0;
+
+      input {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        padding: 0 15px;
+      }
+    }
   }
 
   &Header {
@@ -58,6 +78,9 @@
   }
 
   &Table {
+    position: relative;
+    overflow: hidden;
+
     &__head {
       position: relative;
       background: #DEDEDE;
