--- a/sass/old-pmx.scss
+++ b/sass/old-pmx.scss
@@ -14299,13 +14299,13 @@ input[type="search"]::-webkit-search-results-decoration {
 
 @font-face {
   font-family: 'pmx';
-  src: url('./assets/fonts/pmx.ttf') format("truetype");
+  src: url('../assets/fonts/pmx.ttf') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
     font-family: 'tenforce';
-    src: url('./assets/fonts/tenforce.ttf') format("truetype");
+    src: url('../assets/fonts/tenforce.ttf') format("truetype");
     font-weight: normal;
     font-style: normal;
 }
