--- a/_includes/js_files.html
+++ b/_includes/js_files.html
@@ -12,4 +12,5 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
 <!-- END -->
 
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/root.js"></script>
